--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
       {{ content }}
       </div>
       <footer>
-        &copy; {{ site.time | date: '%Y' }} Jeremy D. Cherry, All Rights Reserved&nbsp;&nbsp;&nbsp;&nbsp;&bull;&nbsp;&nbsp;&nbsp;&nbsp;<a href="/resources" class="resources-footer">Resources</a>
+        &copy; {{ site.time | date: '%Y' }} Jeremy D. Cherry, All Rights Reserved
       </footer>
     </main>
   </body>
