--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -352,6 +352,13 @@ img.book-cover:hover{
   box-shadow: -8px 8px 0px 0px rgba(221,221,221,1);
 }
 
+.icon{
+  width: 15px;
+  margin-right: 6px;
+  position: relative;
+  top: 2px;
+}
+
 h1{
   font-family: "IBM Plex Sans", sans-serif;
   font-size: 26px;
