Changed nav link

--- a/_layouts/resources.html
+++ b/_layouts/resources.html
@@ -32,7 +32,7 @@
         </div>
         <div class="nav-column nav-right">
           <div class="about">
-          <a href="https://dribbble.com/jeremydcherry" class="first">Design &rsaquo;</a><a href="https://medium.com/@jeremydcherry">Writing &rsaquo;</a><a href="https://hopeful.design/">Book &rsaquo;</a><a href="" class="cta"><button>Contact</button></a>
+          <a href="https://dribbble.com/jeremydcherry" class="first">Design &rsaquo;</a><a href="https://medium.com/@jeremydcherry">Writing &rsaquo;</a><a href="https://designdoesbook.com">Book &rsaquo;</a><a href="" class="cta"><button>Contact</button></a>
         </div> 
         </div>  
       </div>      
