--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
   <body>
     <header class="page-header" role="banner">
         <div class="about">
-          <a href="https://dribbble.com/jeremydcherry" class="first">Design &rsaquo;</a><a href="https://medium.com/@jeremydcherry">Writing &rsaquo;</a><a href="https://hopeful.design/">Book &rsaquo;</a><a href="mailto:hello@jeremydcherry.com" class="btn">Contact</a>
+          <a href="https://dribbble.com/jeremydcherry" class="first">Design &rsaquo;</a><a href="https://medium.com/@jeremydcherry">Writing &rsaquo;</a><a href="https://designdoesbook.com">Book &rsaquo;</a><a href="mailto:jeremy@jeremydcherry.com" class="btn">Contact</a>
         </div>   
     </header>
 
