--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,20 @@
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
+    <!--  Essential META Tags -->
+
+    <meta property="og:title" content="Jeremy D. Cherry">
+    <meta property="og:description" content="Digital Designer in Charlottesville, VA">
+    <meta property="og:image" content="/images/og-image.png">
+    <meta property="og:url" content="jeremydcherry.com">
+    <meta name="twitter:card" content="">
+
+
+    <!--  Non-Essential, But Recommended -->
+
+    <meta property="og:site_name" content="Jeremy D. Cherry">
+    <meta name="twitter:image:alt" content="Design with purpose.">
+
     <title>{{ site.title }} — {{ site.description }}</title>
 
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
