Updated book links/assets

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <header class="page-header" role="banner">
   <div class="about right-nav">
-    <a href="https://dribbble.com/jeremydcherry" class="first">Design &rsaquo;</a><a href="https://designdoesbook.com" class="nav">Book &rsaquo;</a><a href="mailto:jeremy@jeremydcherry.com" class="btn">Contact</a>
+    <a href="https://dribbble.com/jeremydcherry" class="first">Design &rsaquo;</a><a href="https://hopeful.design" class="nav">Book &rsaquo;</a><a href="mailto:jeremy@jeremydcherry.com" class="btn">Contact</a>
   </div>   
 </header>
