--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,10 @@
 <header class="page-header" role="banner">
-  <div class="about right-nav">
-    <a href="https://dribbble.com/jeremydcherry" class="first">Design &rsaquo;</a><a href="https://hopeful.design" class="nav">Book &rsaquo;</a><a href="mailto:jeremy@jeremydcherry.com" class="btn">Contact</a>
-  </div>   
+	<div class="about">	
+		<div class="column nav-left">
+			<a href="/" class="home-link"><img src="/images/icon_jdc.svg" class="mark"></a>
+		</div>	
+		<div class="column nav-right">
+	    	<a href="https://dribbble.com/jeremydcherry" class="first">Design &rsaquo;</a><a href="https://hopeful.design" class="nav">Book &rsaquo;</a><a href="mailto:jeremy@jeremydcherry.com" class="btn">Contact</a>
+	  	</div>
+	</div>
 </header>
