Small Nav Styling Tweak

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -257,7 +257,7 @@ a.resources-footer:hover{
 }
 
 .about{
-  margin: 0 4em;
+  margin: 0 50px;
   color: #999;
   font-family: "IBM Plex Sans", sans-serif;
   font-size: 14px;
