--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -510,9 +510,14 @@ footer a:hover{
   color: #ff0048;
 }
 
+.404{
+  text-align: center;
+}
+
 .error{
   text-align: center;
-  margin: 3em auto 6em;
+  margin: 0 auto;
+  padding: 3em 0 6em;
   max-width: 60ch;
 }
 
@@ -587,8 +592,8 @@ footer a:hover{
   .main-list_first{padding: 1em 0 0;}
   .main-list{padding:0;}
   .blank{display: none;}
-  .error{margin: 2em auto 4em; max-width: 85%;}
-  .error h1{font-size:30px;}
+  .error{margin: 0 auto; padding: 4em 0; max-width: 85%;}
+  .error h1{font-size:80px;}
   .error h2{font-size:20px;}
   .error h5{font-size:16px;}
   .main-page{margin: 1em auto; max-width: 85%;}
