--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -362,7 +362,12 @@ a.home-link:hover{
   top: 2px;
 }
 
+.name{
+  font-weight: 500;
+}
+
 h1{
+  color: #333;
   font-family: "IBM Plex Sans", sans-serif;
   font-size: 26px;
   font-weight: 300;
@@ -435,10 +440,11 @@ h5{
 }
 
 h6{
+  color: #333;
   font-family: "Cardo", serif;
-  font-style: italic;
-  font-size: 15px;
+  font-size: 17px;
   font-weight: 400;
+  line-height: 1.5;
   letter-spacing: -0.02em;
   margin-block-start: 0px;
   margin-block-end: 0.25em;
@@ -499,7 +505,7 @@ footer{
   background-color: #f4f4f3;
   color: #777;
   font-family: "IBM Plex Sans", sans-serif;
-  font-size: 12px;
+  font-size: 13px;
   padding: 2em 0;
   text-align: center;
   -webkit-font-smoothing: antialiased;
