--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,7 +4,12 @@
 			<a href="/" class="home-link"><img src="/images/icon_jdc.svg" class="mark"></a>
 		</div>	
 		<div class="column nav-right">
-	    	<a href="https://dribbble.com/jeremydcherry" class="first">Design &rsaquo;</a><a href="https://hopeful.design" class="nav">Book &rsaquo;</a><a href="mailto:jeremy@jeremydcherry.com" class="btn">Contact</a>
+	    	<a href="https://dribbble.com/jeremydcherry" class="first">Design &rsaquo;</a><a href="https://hopeful.design" class="nav">Book &rsaquo;</a>
+	    	{% if page.permalink == "/resources" %}
+	    	<span class="nav-active">Resources</span>
+	    	{% else %}
+	    	<a href="/resources" class="nav">Resources</a>
+	    	{% endif %}
 	  	</div>
 	</div>
 </header>
