--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer>
-&copy; {{ site.time | date: '%Y' }} Jeremy D. Cherry, All Rights Reserved  &nbsp;&nbsp;&nbsp;&nbsp;&bull;&nbsp;&nbsp;&nbsp;&nbsp;<a href="/resources">Resources</a>
+&copy; {{ site.time | date: '%Y' }} Jeremy D. Cherry, All Rights Reserved.
 </footer>
