--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -308,6 +308,28 @@ a.resources-footer:hover{
   color: #fff;
 }
 
+.about .nav-active{
+  padding-left: 35px;
+  color: #999;
+}
+
+a.btn{
+  color: #fff;
+  background-color: #ff0048;
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 14px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  border: 0;
+  border-radius: 50px;
+  padding: 10px 40px;
+}
+
+a.btn:hover{
+  background-color: #000;
+  color: #fff;
+}
+
 a.journey{
   font-weight: 500;
 }
@@ -447,7 +469,7 @@ h6{
   line-height: 1.5;
   letter-spacing: -0.02em;
   margin-block-start: 0px;
-  margin-block-end: 0.25em;
+  margin-block-end: 1.25em;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
   -webkit-font-smoothing: antialiased;
@@ -505,7 +527,7 @@ footer{
   background-color: #f4f4f3;
   color: #777;
   font-family: "IBM Plex Sans", sans-serif;
-  font-size: 13px;
+  font-size: 12px;
   padding: 2em 0;
   text-align: center;
   -webkit-font-smoothing: antialiased;
