--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -528,6 +528,7 @@ footer{
   color: #777;
   font-family: "IBM Plex Sans", sans-serif;
   font-size: 12px;
+  line-height: 2;
   padding: 2em 0;
   text-align: center;
   -webkit-font-smoothing: antialiased;
