--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -330,14 +330,6 @@ a.btn:hover{
   color: #fff;
 }
 
-a.journey{
-  font-weight: 500;
-}
-
-a.journey:hover{
-  background-color: #ff0048;
-}
-
 .bio{
   padding-right: 6em;
 }
@@ -626,7 +618,7 @@ footer a:hover{
   .about a.nav{padding-left: 30px;}
   .about a.first{padding-left: 0;}
   .about a.home{padding-left: 0;}
-  .about .active{padding-left: 30px;}
+  .about .nav-active{padding-left: 30px;}
   .bio{max-width: 40ch; padding-right: 0; margin: 2em auto;}
   img.book-cover{width: 200px; margin:0 auto 1.25em;}
   h1{font-size: 24px;}
