Update OG description

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
 <!--  Essential META Tags -->
 
 <meta property="og:title" content="Jeremy D. Cherry">
-<meta property="og:description" content="Digital Designer in Charlottesville, VA">
+<meta property="og:description" content="Designer, writer, and educator.">
 <meta property="og:image" content="/images/og-image.png">
 <meta property="og:url" content="jeremydcherry.com">
 <meta name="twitter:card" content="">
