--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer>
-Typeset in <a href="https://fonts.google.com/specimen/IBM+Plex+Sans">IBM Plex Sans</a> &amp; <a href="https://fonts.google.com/specimen/Cardo">Cardo</a>&nbsp;&nbsp;&nbsp;&bull;&nbsp;&nbsp;&nbsp; &copy; 2021 Jeremy D. Cherry
+Typeset in <a href="https://fonts.google.com/specimen/IBM+Plex+Sans">IBM Plex Sans</a> &amp; <a href="https://fonts.google.com/specimen/Cardo">Cardo</a> &nbsp;&nbsp;&nbsp;&bull;&nbsp;&nbsp;&nbsp; &#x21AF;&nbsp;Producing <a href="https://www.websitecarbon.com/website/hopeful-design/">0.05g of CO<sub>2</sub>/view</a> &nbsp;&nbsp;&nbsp;&bull;&nbsp;&nbsp;&nbsp; &copy; 2021 Jeremy D. Cherry
 </footer>
