Update About blurb bullet style

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -468,6 +468,10 @@ h6{
   -moz-osx-font-smoothing: grayscale;
 }
 
+h6.bullet{
+  color: #999;
+}
+
 h1.list{
   color: #333;
   font-family: "IBM Plex Sans", sans-serif;
