--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -618,12 +618,13 @@ blockquote {
 
 footer{
   background-color: #f4f4f3;
-  color: #777;
+  color: #888;
   font-family: "IBM Plex Sans", sans-serif;
-  font-size: 12px;
+  font-size: 13px;
   line-height: 2;
-  padding: 2em 0;
+  padding: 25px 0;
   text-align: center;
+  height: 70px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -728,7 +729,7 @@ footer a:hover{
   h4{font-size: 13px;}
   h5{font-size: 13px;}
   blockquote{font-size: 19px; border-left: #eee 5px solid; padding: 0 0 0 20px; margin-inline-start: 0px; margin-inline-end: 0px;}
-  footer{font-size: 12px;}
+  footer{font-size: 12px; padding: 25px 70px; height: 120px;}
 }
 
 
