Updated Footer styles

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -75,6 +75,22 @@
   width: 40%;
 }
 
+.col_footer{
+  width: 100%
+}
+
+.col-third-1_footer {
+  width: 33%;
+}
+
+.col-third-2_footer {
+  width: 33%;
+}
+
+.col-third-3_footer {
+  width: 33%;
+}
+
 .row:after {
   content: "";
   display: table;
