--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,7 @@
 <footer>
-Typeset in <a href="https://fonts.google.com/specimen/IBM+Plex+Sans">IBM Plex Sans</a> &amp; <a href="https://fonts.google.com/specimen/Cardo">Cardo</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &#x21AF;&nbsp;Producing <a href="https://www.websitecarbon.com/website/jeremydcherry-com/">0.14g of CO<sub>2</sub>/view</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &copy; 2021 Jeremy D. Cherry
+<div class="col_footer">
+	<div class="col-third-1_footer">Typeset in <a href="https://fonts.google.com/specimen/IBM+Plex+Sans">IBM Plex Sans</a> &amp; <a href="https://fonts.google.com/specimen/Cardo">Cardo</a> </div>
+	<div class="col-third-2_footer">Producing <a href="https://www.websitecarbon.com/website/jeremydcherry-com/">0.14g of CO<sub>2</sub>/view</a> 
+	<div class="col-third-3_footer">&#169; 2021 Jeremy D. Cherry</div>
+</div>
 </footer>
