Nav style tweaks

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -32,6 +32,7 @@
 .nav-right {
   width: 50%;
   text-align: right;
+  padding-top: 10px;
 }
 
 .column-third {
@@ -73,22 +74,6 @@
 
 .col-third-3_resources {
   width: 40%;
-}
-
-.col_footer{
-  width: 100%
-}
-
-.col-third-1_footer {
-  width: 33%;
-}
-
-.col-third-2_footer {
-  width: 33%;
-}
-
-.col-third-3_footer {
-  width: 33%;
 }
 
 .row:after {
