Updated OG description

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,7 +24,7 @@
 <!--  Non-Essential, But Recommended -->
 
 <meta property="og:site_name" content="Jeremy D. Cherry">
-<meta name="twitter:image:alt" content="Design with purpose.">
+<meta name="twitter:image:alt" content="Designer, writer, and educator">
 
 <title>{{ site.title }} — {{ site.description }}</title>
 
