--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,4 +1,4 @@
-@import "normalize";
+ @import "normalize";
 @import "variables";
 @import url('https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&family=IBM+Plex+Sans:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap');
 
@@ -478,6 +478,23 @@ h1.list{
   line-height: 1;
   display: block;
   margin-block-start: 0;
+  margin-block-end: .25em;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+h3.list{
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 18px;
+  letter-spacing: -0.03em;
+  text-transform: none;
+  line-height: 1;
+  display: block;
+  margin-block-start: .25em;
   margin-block-end: .25em;
   margin-inline-start: 0;
   margin-inline-end: 0;
