Heading style tweak

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -494,8 +494,8 @@ h3.list{
   text-transform: none;
   line-height: 1;
   display: block;
-  margin-block-start: .25em;
-  margin-block-end: .25em;
+  margin-block-start: 0;
+  margin-block-end: 0;
   margin-inline-start: 0;
   margin-inline-end: 0;
   -webkit-font-smoothing: antialiased;
