Updated Twitter social meta

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,9 +16,10 @@
 
 <meta property="og:title" content="Jeremy D. Cherry">
 <meta property="og:description" content="Designer, writer, and educator">
-<meta property="og:image" content="/images/og-image.png">
+<meta property="og:image" content="https://jeremydcherry.com/images/og-image.png">
 <meta property="og:url" content="jeremydcherry.com">
-<meta name="twitter:card" content="">
+<meta name="twitter:card" content="summary">
+<meta name="twitter:creator" content="@jeremydcherry" />
 
 
 <!--  Non-Essential, But Recommended -->
