--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,7 +4,7 @@
 			<a href="/" class="home-link"><img src="/images/icon_jdc.svg" class="mark"></a>
 		</div>	
 		<div class="column nav-right">
-	    	<a href="https://dribbble.com/jeremydcherry" class="first">Design &rsaquo;</a><a href="https://hopeful.design" class="nav">Book &rsaquo;</a><a href="https://medium.com/@jeremydcherry" class="nav">Writing &rsaquo;</a>
+	    	<a href="https://dribbble.com/jeremydcherry" class="first">Design &rsaquo;</a><a href="https://medium.com/@jeremydcherry" class="nav">Writing &rsaquo;</a><a href="https://hopeful.design" class="nav">Book &rsaquo;</a>
 	  	</div>
 	</div>
 </header>
