--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -235,7 +235,7 @@ a.resources-footer:hover{
 
 .main-inner-bottom{
   max-width: 1200px;
-  padding: 3em 0;
+  padding: 2em 0 3em;
   margin: 0 auto;
 }
 
